# ac5-ws-c1-testing-validation-pytest-apis

./: .gitignore  DOCKERFILE-allure-notes.md  README.md  REBUILD_PUNCHLIST.md  Taskfile.yml  conftest.py  pyproject.toml
data/api_responses/: rtr001_show_interfaces.json  rtr001_show_ip_bgp_summary.json  rtr001_show_version.json  rtr002_show_interfaces.json  rtr002_show_ip_bgp_summary.json  rtr002_show_version.json  rtr003_show_interfaces.json  rtr003_show_ip_bgp_summary.json  rtr003_show_version.json  rtr004_show_interfaces.json  rtr004_show_ip_bgp_summary.json  rtr004_show_version.json
examples/: .env.example
examples/001_eapi/: 001_basic_rest.py  002_eapi_call.py  003_client.py  basic_rest.py  client.py  eapi_call.py
examples/001_pytest_fundamentals/: test_first.py  test_markers.py
examples/002_device_apis/: 2_client_class.py
examples/002_jsonata/: interfaces.json  jsonata_flatten_json.py  query.jsonata
examples/003_pytest/001_basic/: test_hello_world.py
examples/003_pytest/002_fixtures/: conftest.py  test_interface_errors.py  test_interface_status.py
examples/003_pytest/003_parametrization/: conftest.py  test_interface_errors.py  test_interface_parametrize.py  test_interface_status.py
examples/003_pytest/004_sot/: conftest.py  test_interface_errors.py  test_interface_status.py
examples/003_pytest/005_reporting/: conftest.py  expected_state.yaml  test_interface_errors.py  test_interface_report.py  (+1 more)
examples/003_validation_suite/: test_intended_vs_operational.py
final-project/: .env.example
inventory/: defaults.yaml  groups.yaml  hosts.yaml
tests/: test_bgp.py  test_facts.py  test_interfaces.py
workbooks/: 001_device_apis.md  001_pytest_fundamentals.md  002_device_apis.md  002_jsonata.md  003_pytest.md  003_validation_suite.md
workspace/001_pytest_fundamentals/: test_first.py  test_markers.py
workspace/003_pytest/: conftest.py  expected_state.yaml  test_basics.py  test_interface_errors.py  test_interface_status.py
workspace/003_validation_suite/: test_intended_vs_operational.py
(+14 files in other folders)
