[project]
name = "ac5-ws-c1-testing-validation-pytest-apis"
version = "0.1.0"
description = "AutoCon 5 Workshop C1: Testing and Validation with Pytest and APIs"
requires-python = ">=3.11"
dependencies = [
    "pytest>=8.0",
    "requests>=2.31",
    "pyyaml>=6.0",
    "python-dotenv>=1.0",
    "rich>=13.7",
    "ipython>=9.13.0",
    "click>=8.3.3",
    "allure-pytest>=2.13",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.ruff.lint.isort]
known-first-party = ["client", "fixtures", "state"]

[tool.ruff.lint.per-file-ignores]
# Workspace files are TODO stubs the attendee fills in; tests/ and examples/
# carry the answer key and are fully linted.
"workspace/**" = ["F401", "F821", "F841"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"
markers = [
    "online: test hits a live device via eAPI",
    "offline: test reads from data/api_responses/ instead of a device",
    "bgp: BGP-specific validation tests",
    "intended_vs_operational: compares intended state to running state",
]
